# ibus-rime

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGES.md  CMakeLists.txt  ChangeLog  Makefile  README  README.md  ibus_rime.yaml  install-static.sh  install.sh  rime.xml  rime.xml.in  rime_config.h  rime_config.h.in  rime_engine.c  rime_engine.h  rime_main.c  rime_settings.c  rime_settings.h  rime_version.h
cmake/: FindBrise.cmake  FindRimeData.cmake
icons/: LICENSE-Freecns.txt
package/: binpkg-install  make-binpkg-static  make-package  package.sh
package/archlinux/: ChangeLog  PKGBUILD  ibus-rime.install
package/archlinux/brise/: ChangeLog  PKGBUILD
package/archlinux/ibus-rime/: ChangeLog  PKGBUILD  ibus-rime.install
package/archlinux/librime/: ChangeLog  PKGBUILD  librime.install
